商品搜索页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SweetFish">
         <activity
+            android:name="com.demo.sweetfish.ui.searchPage.SearchPageActivity"
+            android:exported="false" />
+        <activity
             android:name="com.demo.sweetfish.ui.goodsPublishPage.GoodsPublishPageActivity"
             android:exported="false" />
         <activity
