添加了用户信息修改页面以及从用户个人空间跳转到修改页面的逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SweetFish">
         <activity
+            android:name="com.demo.sweetfish.ui.userPage.userInfoEdit.UserInfoEditPageActivity"
+            android:exported="false" />
+        <activity
             android:name="com.demo.sweetfish.ui.searchResultPage.SearchResultPageActivity"
             android:exported="false" />
         <activity
