--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name="com.demo.sweetfish.SweetFishApplication"
@@ -10,7 +11,8 @@
         android:label="@string/app_name_en"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SweetFish">
+        android:theme="@style/Theme.SweetFish"
+        tools:replace="android:label,android:theme">
         <activity
             android:name="com.demo.sweetfish.ui.userPage.userInfoEdit.UserInfoEditPageActivity"
             android:exported="false" />
