--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.SweetFish"
         tools:replace="android:label,android:theme">
         <activity
+            android:name="com.demo.sweetfish.ui.goodsPublishPage.GoodsPriceSetting"
+            android:exported="false" />
+        <activity
             android:name="com.demo.sweetfish.ui.userPage.userFanListPage.UserFanListPageActivity"
             android:exported="false" />
         <activity
