对商品发布页面的一些逻辑实现以及控件和变量命名进行了更改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.SweetFish"
         tools:replace="android:label,android:theme">
         <activity
-            android:name="com.demo.sweetfish.ui.goodsPublishPage.GoodsPriceSetting"
+            android:name="com.demo.sweetfish.ui.goodsPublishPage.GoodsPriceSettingPageActivity"
             android:exported="false" />
         <activity
             android:name="com.demo.sweetfish.ui.userPage.userFanListPage.UserFanListPageActivity"
